<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:padding="@dimen/dp_20"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_back"
        android:textColor="@color/white">

    </TextView>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/leave"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/dialog_leave"
            android:textColor="@color/dialog_onclick"
            android:background="@drawable/ripple_border">

        </TextView>

        <TextView
            android:id="@+id/stay"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/dialog_stay"
            android:textColor="@color/dialog_onclick"
            android:background="@drawable/ripple_border">

        </TextView>
    </LinearLayout>




</LinearLayout>