<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_20"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_editor"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20">
    </TextView>

    <EditText
        android:id="@+id/remark_edit"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/edit_text"
        android:maxLength="300"
        android:background="@drawable/edit_rectangle"
        android:textCursorDrawable="@drawable/cursor_dialog">

    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/remark_clear"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:text="@string/dialog_clear"
            android:gravity="center"
            android:textColor="@color/dialog_onclick"
            android:background="@drawable/ripple_border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/remark_cancel"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_40"
                android:text="@string/dialog_cancel"
                android:layout_marginRight="@dimen/dp_30"
                android:gravity="center"
                android:textColor="@color/dialog_onclick"
                android:background="@drawable/ripple_border" />

            <TextView
                android:id="@+id/remark_confirm"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_40"
                android:text="@string/dialog_confirm"
                android:gravity="center"
                android:textColor="@color/dialog_onclick"
                android:background="@drawable/ripple_border" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>