<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--周数设置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20"
        android:background="@drawable/pop_window_shape">

<!--        周数、修改当前周-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_week">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/update_week"
                    android:onClick="homePage"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_30"
                    android:gravity="center"
                    android:text="@string/menu_weekupdate"
                    android:textColor="#6A5ACD"
                    android:clickable="true"
                    android:background="@drawable/ripple_border" />
            </LinearLayout>


        </LinearLayout>

<!--        滑动进度条   https://blog.csdn.net/qq_38950819/article/details/81938193 【Android】Seekbar拖动条的使用-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <SeekBar
                android:id="@+id/seekBar"
                android:splitTrack="false"
                android:thumb="@drawable/seekbar_thumb"
                android:progressDrawable="@drawable/seekbar_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

<!--        切换课表-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_switch"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:gravity="right">

                <TextView
                    android:id="@+id/add_table"
                    android:onClick="homePage"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_30"
                    android:gravity="center"
                    android:text="@string/menu_newtable"
                    android:textColor="@color/text_onclick"
                    android:clickable="true"
                    android:background="@drawable/ripple_border"/>

                <TextView
                    android:id="@+id/manage"
                    android:onClick="homePage"
                    android:gravity="center"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@string/menu_manage"
                    android:textColor="@color/text_onclick"
                    android:clickable="true"
                    android:background="@drawable/ripple_borderless"/>

            </LinearLayout>


        </LinearLayout>

<!--        课表选择-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pop_rv_table_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

<!--八个按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="vertical"
        android:background="@drawable/pop_window_shape">

<!--第一排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_clock"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_clock"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_clock"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_setting"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_setting"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_setting"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_added"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_added"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_added"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_help"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_help"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_help"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

<!--第二排-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_about"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_about"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_about"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_connect"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_connect"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_connect"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_global_set"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_globalset"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_globalset"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="homePage"
                android:id="@+id/menu_alarm"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/ripple_borderless">
                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/menu_alarm"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_alarm"
                    android:textSize="@dimen/sp_12"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>